# typesearch.rs

./: .gitignore  Cargo.toml  README.md  script.sh
page/: Cargo.toml
page/src/: lib.rs
page/static/: index.html  styles.css
reeves-types/: Cargo.toml
reeves-types/src/: lib.rs
src/: lib.rs  main.rs  server.rs
