[package]
name = "reeves"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reeves-types = { path = "reeves-types" }

# rust-analyzer
base_db = { path = "rust-analyzer/crates/base_db" }
hir = { path = "rust-analyzer/crates/hir" }
profile = { path = "rust-analyzer/crates/profile" }
project_model = { path = "rust-analyzer/crates/project_model" }
rust-analyzer = { path = "rust-analyzer/crates/rust-analyzer" }

# srv
actix-files = { git = "https://github.com/aidanhs/actix-web.git", rev = "9661ef9" }
actix-rt = "1.0"
actix-web = "2.0"
filesystem = { git = "https://github.com/aidanhs/filesystem-rs.git", rev = "3aafbbc" }
tar = { version = "0.4", default-features = false }

# main
bincode = "1.3"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
meilisearch-sdk = "0.9.0"
# KEEP THIS IN SYNC WITH MEILISEARCH
isahc = { version = "1.0", features = ["static-ssl"]}
serde = "1.0"
serde_json = "1.0"
sled = "0.34.6"
void = "1"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
incremental = true
debug = 0

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
