[package]
name = "reeves"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reeves-types = { path = "reeves-types" }

# rust-analyzer
ra-base_db = { package = "base_db", path = "rust-analyzer/crates/base_db" }
ra-hir = { package = "hir", path = "rust-analyzer/crates/hir" }
ra-profile = { package = "profile", path = "rust-analyzer/crates/profile" }
ra-project_model = { package = "project_model", path = "rust-analyzer/crates/project_model" }
ra-paths = { package = "paths", path = "rust-analyzer/crates/paths" }
rust-analyzer = { path = "rust-analyzer/crates/rust-analyzer" }

# srv
actix-files = { git = "https://github.com/aidanhs/actix-web.git", rev = "9661ef9" }
actix-rt = "1.0"
actix-web = "2.0"
filesystem = { git = "https://github.com/aidanhs/filesystem-rs.git", rev = "3aafbbc" }
tar = { version = "0.4", default-features = false }

# main
anyhow = "1.0"
bincode = "1.3"
crates-index = { version = "0.17", features = ["vendored-openssl"] }
either = { version = "1.6", features = ["serde"] }
env_logger = "0.9"
futures = "0.3"
log = "0.4"
meilisearch-sdk = "0.10.0"
# KEEP THIS IN SYNC WITH MEILISEARCH
isahc = { version = "1.0", features = ["json", "static-ssl"]}
rayon = "1.5"
serde = "1.0"
serde_json = "1.0"
sled = "0.34.6"
structopt = "0.3"
void = "1"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
incremental = true
debug = 0

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
